completed home page set up

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,83 @@
-<!DOCTYPE html>
+<!-- 
+  Developed by UseWebEffects Web Agency - Oghenemaro Okolosio
+  Email: usewebeffects@gmail.com
+  Github: Omarookolosio94
+-->
+
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="theme-color" content="#256b92" />
+
+    <!-- Primary Meta Tags -->
+    <title>StreamFlo | Wholesale Chemical Distributor in Nigeria</title>
     <meta
       name="description"
-      content="StreamFlo Chemicals"
+      content="StreamFlo is Nigeria's leading wholesale distributor of high-quality chemicals for diverse industries. We provide reliable supply, expert support, competitive pricing, and a comprehensive product range to meet all your needs."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>StreamFlo</title>
+    <meta
+      name="keywords"
+      content="StreamFlo, chemicals distributor, Nigeria chemicals, wholesale chemicals, industrial chemicals, chemical supply Nigeria, high-quality chemicals, Lagos chemicals, expert chemical support"
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta
+      property="og:title"
+      content="StreamFlo | Wholesale Chemical Distributor in Nigeria"
+    />
+    <meta
+      property="og:description"
+      content="StreamFlo is Nigeria's trusted source for wholesale chemical distribution, serving industries with expert support, competitive pricing, and reliable supply chains."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:url" content="https://www.seachems.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="StreamFlo | Wholesale Chemical Distributor in Nigeria"
+    />
+    <meta
+      name="twitter:description"
+      content="StreamFlo offers high-quality chemicals at competitive prices for industries across Nigeria. Reliable supply and expert support guaranteed."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/twitter-image.jpg" />
+
+    <!-- Additional SEO Optimizations -->
+    <link rel="canonical" href="https://www.seachems.com" />
+    <meta name="author" content="Oghenemaro Okolosio" />
+
+    <!-- Fonts and Styles -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="bg-lightPrimary font-dm">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
