--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,3 @@
-<!-- 
-  Developed by UseWebEffects Web Agency - Oghenemaro Okolosio
-  Email: usewebeffects@gmail.com
-  Github: Omarookolosio94
--->
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -28,14 +22,21 @@
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="theme-color" content="#256b92" />
+    <meta name="theme-color" content="#184E45" />
 
-    <title>StreamFlo | Wholesale Chemical Distributor in Nigeria</title>
-    <meta name="author" content="Oghenemaro Okolosio" />
+    <title>Zorg Financial Group | Trusted Financial Services in Canada</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
+    />
+    <meta
+      name="description"
+      content="Zorg Financial Group offers expert financial services including wealth management, retirement planning, insurance solutions, and small business financial consulting in Canada."
+    />
+    <meta
+      name="keywords"
+      content="Zorg Financial Group, financial services Canada, wealth management, retirement planning, insurance, small business consulting, trusted financial advisors"
     />
   </head>
   <body class="bg-lightPrimary font-dm">
